# cmake_multi_project

./: CMakeLists.txt  LICENSE  README.md
app1/: CMakeLists.txt  CMakeLists.txt~
app1/src/: #main.c#  .#main.c  main.c
libA/: CMakeLists.txt  CMakeLists.txt~
libA/src/: foo.c
libB/: CMakeLists.txt  CMakeLists.txt~
libB/include/: foo.h
